Padronização do estilo.

--- a/index.html
+++ b/index.html
@@ -30,35 +30,35 @@
         onerror="this.style.display='none'; this.classList.remove('blur-md');"
     >
 
-    <!-- Contêiner principal para centralizar e limitar a largura do conteúdo -->
-    <div class="bg-gray-300/80 p-8 rounded-xl shadow-2xl max-w-md w-full text-center backdrop-blur-xl">
+    <div class="bg-gray-100/90 pt-8 pb-8 pl-4 pr-4 rounded-xl shadow-2xl max-w-md w-full text-center backdrop-blur-xl">
         <!-- Seção de perfil da empresa -->
         <div class="mb-8">
             <!-- Imagem do logotipo da empresa ou foto de perfil -->
-            <!-- Alterado para w-full para ter a mesma largura do cartão e h-40 para manter um tamanho definido -->
             <img
                 src="./images/logo.png"
                 alt="Logotipo MasterPlan Imóveis"
                 class="w-full h-40 mx-auto mb-4 object-contain drop-shadow-xl"
-                onerror="this.onerror=null;this.src='https://placehold.co/160x160/cccccc/000000?text=Erro';"
+                onerror="this.onerror=null;this.src='https://placehold.co/160x160/cccccc/000000?text=MasterPlan';"
             >
-            <!-- Slogan ou descrição da empresa -->
-            <p class="text-gray-800 text-lg font-bold drop-shadow">Seu próximo imóvel começa aqui.</p>
+            <div class="mt-8 pt-8 border-t border-gray-400">
+                <!-- Slogan ou descrição da empresa -->
+                <p class="text-gray-600 text-xl font-bold">O imóvel dos seus sonhos está aqui.</p>
+            </div>
         </div>
 
         <!-- Seção de links da empresa -->
-        <div class="space-y-3 mb-8">
+        <div class="space-y-2 mb-8 mt-8 pt-8 border-t border-gray-400">
             <!-- Botão 1: Website Oficial -->
             <a 
                 href="https://masterplanresende.com.br" 
                 target="_blank" 
                 rel="noopener noreferrer" 
-                class="block w-full transform transition-all duration-300 hover:scale-105"
+                class="block w-full transform transition-all duration-300 hover:scale-110"
             >
                 <img 
                     src="./images/website.png" 
                     alt="Acesse nosso site" 
-                    class="w-full rounded-lg drop-shadow-xl"
+                    class="w-full rounded-lg drop-shadow-2xl"
                 >
             </a>
             <!-- Botão 2: Buscar Imóveis -->
@@ -66,12 +66,12 @@
                 href="https://masterplanresende.com.br/busca" 
                 target="_blank" 
                 rel="noopener noreferrer" 
-                class="block w-full transform transition-all duration-300 hover:scale-105"
+                class="block w-full transform transition-all duration-300 hover:scale-110"
             >
                 <img 
                     src="./images/busca.png" 
                     alt="Busque um imóvel" 
-                    class="w-full rounded-lg drop-shadow-xl"
+                    class="w-full rounded-lg drop-shadow-2xl"
                 >
             </a>
             <!-- Botão 3: Fale Conosco no WhatsApp -->
@@ -79,12 +79,12 @@
                 href="https://api.whatsapp.com/send?phone=5524992661518&text=Ol%C3%A1%2C%20estou%20visitando%20o%20site%2C%20gostaria%20de%20saber%20mais%20informa%C3%A7%C3%B5es" 
                 target="_blank" 
                 rel="noopener noreferrer" 
-                class="block w-full transform transition-all duration-300 hover:scale-105"
+                class="block w-full transform transition-all duration-300 hover:scale-110"
             >
                 <img 
                     src="./images/whatsapp.png" 
                     alt="Fale com a gente no WhatsApp" 
-                    class="w-full rounded-lg drop-shadow-xl"
+                    class="w-full rounded-lg drop-shadow-2xl"
                 >
             </a>
             <!-- Botão 4: Instagram -->
@@ -92,12 +92,12 @@
                 href="https://www.instagram.com/masterplan.resende/" 
                 target="_blank" 
                 rel="noopener noreferrer" 
-                class="block w-full transform transition-all duration-300 hover:scale-105"
+                class="block w-full transform transition-all duration-300 hover:scale-110"
             >
                 <img 
                     src="./images/instagram.png" 
                     alt="Siga-nos no Instagram" 
-                    class="w-full rounded-lg drop-shadow-xl"
+                    class="w-full rounded-lg drop-shadow-2xl"
                 >
             </a>
             <!-- Botão 5: Facebook -->
@@ -105,12 +105,12 @@
                 href="https://www.facebook.com/people/Master-Plan-Resende/61568457718067/" 
                 target="_blank" 
                 rel="noopener noreferrer" 
-                class="block w-full transform transition-all duration-300 hover:scale-105"
+                class="block w-full transform transition-all duration-300 hover:scale-110"
             >
                 <img 
                     src="./images/facebook.png" 
                     alt="Siga-nos no Facebook" 
-                    class="w-full rounded-lg drop-shadow-xl"
+                    class="w-full rounded-lg drop-shadow-2xl"
                 >
             </a>
             <!-- Botão 6: Canal no YouTube -->
@@ -118,12 +118,12 @@
                 href="https://www.youtube.com/@masterplanresende" 
                 target="_blank" 
                 rel="noopener noreferrer" 
-                class="block w-full transform transition-all duration-300 hover:scale-105"
+                class="block w-full transform transition-all duration-300 hover:scale-110"
             >
                 <img 
                     src="./images/youtube.png" 
                     alt="Veja nosso canal no YouTube" 
-                    class="w-full rounded-lg drop-shadow-xl"
+                    class="w-full rounded-lg drop-shadow-2xl"
                 >
             </a>
             <!-- Botão 7: Mande-nos um e-mail -->
@@ -131,12 +131,12 @@
                 href="mailto:contato@masterplanresende.com.br" 
                 target="_blank"
                 rel="noopener noreferrer" 
-                class="block w-full transform transition-all duration-300 hover:scale-105"
+                class="block w-full transform transition-all duration-300 hover:scale-110"
             >
                 <img 
                     src="./images/email.png" 
                     alt="Mande-nos um e-mail" 
-                    class="w-full rounded-lg drop-shadow-xl"
+                    class="w-full rounded-lg drop-shadow-2xl"
                 >
             </a>
             <!-- Botão 8: LinkedIn -->
@@ -144,20 +144,20 @@
                 href="https://www.linkedin.com/company/masterplan-imóveis-ltda/" 
                 target="_blank" 
                 rel="noopener noreferrer" 
-                class="block w-full transform transition-all duration-300 hover:scale-105"
+                class="block w-full transform transition-all duration-300 hover:scale-110"
             >
                 <img 
                     src="./images/linkedin.png" 
                     alt="Conecte-se no LinkedIn" 
-                    class="w-full rounded-lg drop-shadow-xl"
+                    class="w-full rounded-lg drop-shadow-2xl"
                 >
             </a>
         </div>
 
         <!-- Seção do Mapa -->
-        <div class="mt-8 pt-8 border-t border-gray-700">
-            <h2 class="text-2xl font-bold text-gray-800 mb-4">Onde Estamos</h2>
-            <div class="relative" style="padding-bottom: 75%;"> <!-- Proporção 4:3 para responsividade -->
+        <div class="mt-8 pt-8 border-t border-gray-400">
+            <h2 class="text-2xl font-bold text-gray-600 mb-8 font-bold">Onde Estamos</h2>
+            <div class="relative shadow-2xl" style="padding-bottom: 75%;"> <!-- Proporção 4:3 para responsividade -->
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3384.7170990520217!2d-44.46802588059065!3d-22.482140984436825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9e7ed708d3ffff%3A0xba333ab4dae6db73!2sMasterPlan%20Im%C3%B3veis!5e0!3m2!1sen!2sus!4v1749334987218!5m2!1sen!2sus"
                     width="100%"
@@ -169,7 +169,7 @@
                     class="absolute top-0 left-0 w-full h-full rounded-lg shadow-md"
                 ></iframe>
             </div>
-            <p class="text-gray-800 text-sm mt-4">Visite-nos em nosso endereço: Avenida Luiz Dias Martins, 37, Alphapark, Parque Ipiranga, Resende - RJ, 27511-970. Use o mapa para traçar sua rota!</p>
+            <p class="text-gray-800 text-sm mt-8">Nosso endereço: Avenida Luiz Dias Martins, 37, Alphapark, Parque Ipiranga, Resende - RJ, 27511-970.</p>
         </div>
 
         <!-- Rodapé da empresa -->
