Inclusão do botão do lançamento.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
 
         <!-- Seção de links da empresa -->
         <div class="space-y-2 mb-8 mt-8 pt-8 border-t border-gray-400">
+            <!-- Botão Especial: Lançamento -->
+            <a 
+                href="https://masterplanresende.com.br" 
+                target="_blank" 
+                rel="noopener noreferrer" 
+                class="block w-full transform transition-all duration-300 hover:scale-110"
+            >
+                <img 
+                    src="./images/valledalimeira.png" 
+                    alt="Saiba mais sobre o Valle da Limeira!" 
+                    class="w-full rounded-lg drop-shadow-2xl"
+                >
+            </a>
             <!-- Botão 1: Website Oficial -->
             <a 
                 href="https://masterplanresende.com.br" 
